--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,9 +2,15 @@ $activeBorderColor = rgba(33ccffee) rgba(00ff99ee) 45deg
 
 general {
     col.active_border = $activeBorderColor
+    gaps_in = 2
+    gaps_out = 4
 }
 
 group {
     col.border_active = $activeBorderColor
 }
 
+decoration {
+    # Use round window corners
+    rounding = 6
+}
