update hyprland looknfeel

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,16 +1,16 @@
 $activeBorderColor = rgba(33ccffee) rgba(00ff99ee) 45deg
 
 general {
-    col.active_border = $activeBorderColor
+    border_size = 0
     gaps_in = 2
     gaps_out = 4
+}
+
+decoration {
+    rounding = 8
 }
 
 group {
     col.border_active = $activeBorderColor
 }
 
-decoration {
-    # Use round window corners
-    rounding = 6
-}
